[package]
name = "epi"
version = "0.1.0"
edition = "2021"

# From https://stackoverflow.com/questions/29008127/why-are-rust-executables-so-huge
[profile.release]
#opt-level = 'z'     # Optimize for size.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
strip = true  

[dependencies]
dinvoke = { path = "dinvoke" }
data = { path = "data" }
hex = "*"
litcrypt2 = "0.1.2"
getopts = "0.2"
minreq = "*"

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_Debug",
    "Wdk_Foundation",
    "Win32_System_Threading"
]

[build-dependencies]
static_vcruntime = "2.0"