[package]
name = "loader"
version = "0.1.0"
edition = "2021"

# From https://stackoverflow.com/questions/29008127/why-are-rust-executables-so-huge
[profile.release]
opt-level = 'z'     # Optimize for size.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
strip = true  

[dependencies]
dinvoke = { path = "dinvoke" }
bindings = { path = "bindings" }
data = { path = "data" }
hex = "*"
litcrypt = "0.3"

[build-dependencies]
static_vcruntime = "2.0"

[lib]
crate-type = ["cdylib"]