[package]
name = "loader"
version = "0.1.0"
edition = "2021"

# From https://stackoverflow.com/questions/29008127/why-are-rust-executables-so-huge
[profile.release]
#opt-level = 'z'     # Optimize for size.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
strip = true  

[dependencies]
dinvoke = { path = "dinvoke" }
data = { path = "data" }
hex = "*"
litcrypt2 = "0.1.2"

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System",
    "Win32_System_IO",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_WindowsProgramming",
    "Wdk_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory"
]

[build-dependencies]
static_vcruntime = "2.0"

[lib]
crate-type = ["cdylib"]