[package]
name = "dinvoke"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package.dinvoke]
opt-level = 3
debug = 0

[dependencies]
data = { path = "../data" }
libc = "0.2.101"
winproc = "0.6.4"
litcrypt2 = "0.1.2"
nanorand = "*"

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_IO",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_Debug",
    "Wdk_Foundation",
    "Win32_System_Threading"
]